2009-05-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc (ATmega128RFA1): update the number of
	interrupt vectors, and extended IO bitmaps.

2009-05-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/devdescr.xsl: update for rev 1.29 of src/jtag.h:
	generate the is_xmega flag correctly

2009-04-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-release 2.10.

2009-04-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for release 2.10.

2009-04-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Check whether libbfd requires libz (true for
	libbfd 2.19 and above); while here, replace the obosolete
	AC_TRY_COMPILE by AC_COMPILE_IFELSE.

2009-03-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for post-release 2.9.

2009-03-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version for release 2.9.

2009-02-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc (atmega128rfa1): new device.

2008-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2run.cc (jtag2::jtagSingleStep): When being interrupted by
	GDB while waiting for the EVT_BREAK from a CMND_SINGLE_STEP, we must
	issue a CMND_STOP_PROGRAM before proceeding.

2008-09-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: More ATxmega support.  As the Xmega requires a
	different initialization, this must be made known to AVaRICE
	beforehand.  The option -x (--xmega) can be used to tell AVaRICE
	that the target is an Xmega.  Alternatively, specifying an
	ATxmega device explicitly through -P will also work.
	* src/jtag2.h: (Ditto.)
	* src/jtag2io.cc: (Ditto.)
	* src/main.cc: (Ditto.)
	* src/devdescr.cc: (Ditto.) Additionally, provide a separate
	entry for the ATxmega128A1 rev D as this device uses a different
	JTAG ID.
	* doc/avarice.1: Document the -x/--xmega option.

2008-09-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to post-2.8.
