@@ -1,3 +1,10 @@
+2009-06-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	bug 2812023: build failed with gcc 4.4.0
+	* src/jtag2usb.cc (opendev): make a local copy of jtagDeviceName,
+	and then operate on that copy instead of trying to modify a const
+	object.
+
 2009-05-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* src/devdescr.cc (ATmega128RFA1): update the number of
